Fixes margin on mobile navigation

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -23,6 +23,9 @@
   z-index: 100;
   border-radius: 0 0 18px 18px;
   padding: 0 2rem;
+  @media only screen and (max-width: 768px) {
+    border-radius: 0;
+  }
   .img-logo {
     width: 17rem;
   }
@@ -121,12 +124,13 @@
       @media only screen and (max-width: 768px) {
         left: 0;
         padding: 0 3rem;
+        margin-top: 2.3rem;
       }
     }
   }
   .nav-item {
     @media only screen and (max-width: 768px) {
-      margin: 2.5rem 0;
+      margin: 1rem 2rem;
     }
   }
 }
@@ -416,7 +420,7 @@
         }
       }
       p {
-        font-weight: 500;
+        font-weight: 400;
         color: $dark-blue;
         @media (min-width: 770px) {
           height: 10rem;
@@ -484,7 +488,7 @@
   &__text {
     display: inline-block;
     text-align: center;
-    font-weight: 500;
+    font-weight: 400;
   }
   &__text--main {
     padding-bottom: 2rem;
@@ -537,7 +541,6 @@
       padding-bottom: 1rem;
     }
     .text-pricing {
-      // padding-left: 2rem;
       span {
         color: $pink;
         font-weight: 500;
